# python-workspace-template

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  LICENSE  README  pyproject.toml  requirements.txt  ruff.toml
.claude/: settings.json
.claude/hooks/: pre_bash_check.sh  ruff_lint.sh  ty_check.sh
.claude/rules/: git-workflow.md  lint-and-format.md  logging.md  package-management.md  type-checking.md
.devcontainer/: devcontainer.json
.devcontainer/scripts/: install_uv.sh  setup_claude.sh
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: unit-test.yml
scripts/: create_env_file.sh
src/: __init__.py
src/utils/: __init__.py  _logging.py
tests/utils/: test__logging.py
